disable bazarr ingress

--- a/argocd/apps/media-server/bazarr/ingress.yaml
+++ b/argocd/apps/media-server/bazarr/ingress.yaml
@@ -4,14 +4,14 @@ metadata:
   name: bazarr
   labels:
     app: bazarr
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+  # annotations:
+  #   cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: istio
-  tls:
-    - hosts:
-        - bazarr.yanello.net
-      secretName: bazarr-tls
+  # tls:
+  #   - hosts:
+  #       - bazarr.yanello.net
+  #     secretName: bazarr-tls
   rules:
     - host: bazarr.yanello.net
       http:
