--- a/argocd/apps/media-server/prowlarr/ingress.yaml
+++ b/argocd/apps/media-server/prowlarr/ingress.yaml
@@ -6,6 +6,9 @@ metadata:
     app: prowlarr
 spec:
   ingressClassName: istio
+  tls:
+    - hosts:
+        - prowlarr.yanello.net
   rules:
     - host: prowlarr.yanello.net
       http:
