--- a/argocd/apps/media-server/prowlarr/ingress.yaml
+++ b/argocd/apps/media-server/prowlarr/ingress.yaml
@@ -4,9 +4,8 @@ metadata:
   name: prowlarr
   labels:
     app: prowlarr
-  annotations:
-    kubernetes.io/ingress.class: istio
 spec:
+  ingressClassName: istio
   rules:
     - host: prowlarr.yanello.net
       http:
