--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -163,19 +163,21 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: ubiquiti-vs
+  # annotations:
+  #   cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   hosts:
     - ui.yanello.net
   gateways:
     - istio-system/kube-gateway
   http:
-    - match:
-        - port: 443
+    # - match:
+    #     - port: 443
       route:
         - destination:
             host: homeassistant.local
             port:
-              number: 8443
+              number: 8080
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
