--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -173,7 +173,7 @@ spec:
   http:
     # - match:
     #     - port: 443
-      route:
+    - route:
         - destination:
             host: homeassistant.local
             port:
