--- a/argocd/apps/infra/istio/resources/serviceEntry.yaml
+++ b/argocd/apps/infra/istio/resources/serviceEntry.yaml
@@ -38,7 +38,7 @@ spec:
       protocol: HTTP
     - number: 8443
       name: ubiquiti
-      protocol: HTTPS
+      protocol: HTTPS-tls
     - number: 8080
       name: ubiquiti
       protocol: HTTP
