--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -175,7 +175,7 @@ spec:
         - port: 443
           sniHosts:
             - ui.yanello.net
-    - route:
+      route:
         - destination:
             host: homeassistant.local
             port:
