--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -7,7 +7,6 @@ spec:
     istio: ingressgateway
   servers:
   - hosts:
-    # - "*"
       - "*.yanello.net"
       - yanello.net
     port:
@@ -37,41 +36,40 @@ spec:
         - AES256-GCM-SHA384
         - AES256-SHA
     hosts:
-     # - "*"
       - "*.yanello.net"
       - yanello.net
-# ---
-# apiVersion: gateway.networking.k8s.io/v1beta1
-# kind: Gateway
-# metadata:
-#   name: gw-api
-# spec:
-#   gatewayClassName: istio
-#   listeners:
-#     - name: http
-#       hostname: "*.yanello.net"
-#       port: 80
-#       protocol: HTTP
-#       allowedRoutes:
-#         namespaces:
-#           from: Same
-#         kinds:
-#           - group: gateway.networking.k8s.io
-#             kind: HTTPRoute
-#     - name: https
-#       hostname: "*.yanello.net"
-#       port: 443
-#       protocol: HTTPS
-#       allowedRoutes:
-#         namespaces:
-#           from: All
-#         kinds:
-#           - group: gateway.networking.k8s.io
-#             kind: HTTPRoute
-#       tls:
-#         mode: Terminate
-#         certificateRefs:
-#           - kind: Secret
-#             group: ""
-#             name: default-ingress-cert
-#             namespace: istio-system
+---
+apiVersion: gateway.networking.k8s.io/v1beta1
+kind: Gateway
+metadata:
+  name: gw-api
+spec:
+  gatewayClassName: istio
+  listeners:
+    - name: http
+      hostname: "*.yanello.net"
+      port: 80
+      protocol: HTTP
+      allowedRoutes:
+        namespaces:
+          from: Same
+        kinds:
+          - group: gateway.networking.k8s.io
+            kind: HTTPRoute
+    - name: https
+      hostname: "*.yanello.net"
+      port: 443
+      protocol: HTTPS
+      allowedRoutes:
+        namespaces:
+          from: All
+        kinds:
+          - group: gateway.networking.k8s.io
+            kind: HTTPRoute
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - kind: Secret
+            group: ""
+            name: default-ingress-cert
+            namespace: istio-system
