--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -80,6 +80,10 @@ spec:
     chart: gateway
     helm:
       valuesObject:
+        gateways:
+          istio-ingressgateway:
+            loadBalancerIP: 10.10.8.0
+            externalTrafficPolicy: Local
         affinity:
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
