--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -8,7 +8,7 @@ spec:
     # Allow all traffic from internal network (LAN)
     - from:
         - source:
-            remoteIpBlocks:
+            ipBlocks:
               # - "10.0.0.0/8"
               # - "172.16.0.0/12"
               - "192.168.0.0/16"
