--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -81,9 +81,9 @@ spec:
     helm:
       valuesObject:
         gateways:
-          - istio-ingressgateway:
-              loadBalancerIP: 10.10.8.0
-              externalTrafficPolicy: Local
+          istio-ingressgateway:
+            loadBalancerIP: 10.10.8.0
+            externalTrafficPolicy: Local
         affinity:
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
