--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -81,8 +81,8 @@ spec:
     helm:
       valuesObject:
         service:
-          loadBalancerIP: 10.10.8.0
-          externalTrafficPolicy: Cluster
+         # loadBalancerIP: 10.10.8.0
+          externalTrafficPolicy: Local
         affinity:
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
