--- a/argocd/apps/infra/istio/kustomization.yaml
+++ b/argocd/apps/infra/istio/kustomization.yaml
@@ -13,3 +13,6 @@ resources:
   # - resources/istio-gw.yaml
   # - resources/pdb.yaml
   # - resources/serviceEntry.yaml
+
+commonAnnotations:
+  "proxy.istio.io/config": '{"gatewayTopology" : { "numTrustedProxies": 1 }'
