--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -83,6 +83,8 @@ spec:
         service:
           loadBalancerIP: 10.10.8.0
           externalTrafficPolicy: Cluster
+        annotations:
+          proxy.istio.io/config: '{"gatewayTopology" : { "numTrustedProxies": 1 }'
         affinity:
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
