--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -82,9 +82,9 @@ spec:
       valuesObject:
         service:
           loadBalancerIP: 10.10.8.0
-          externalTrafficPolicy: Cluster
-        annotations:
-          proxy.istio.io/config: '{"gatewayTopology" : { "numTrustedProxies": 2 }'
+          externalTrafficPolicy: Local
+        # annotations:
+        #   proxy.istio.io/config: '{"gatewayTopology" : { "numTrustedProxies": 2 }'
         affinity:
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
