--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -113,7 +113,7 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: agh-vs
+  name: adguardhome-vs
 spec:
   hosts:
     - agh.yanello.net
