--- a/argocd/apps/infra/metallb/resources.yaml
+++ b/argocd/apps/infra/metallb/resources.yaml
@@ -22,6 +22,7 @@ apiVersion: metallb.io/v1beta1
 kind: BGPAdvertisement
 metadata:
   name: bgp-advertisement
+spec:
   ipAddressPools:
     - address-pool
 ---
