--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -9,26 +9,26 @@ spec:
     - from:
         - source:
             ipBlocks:
-              # - "10.0.0.0/8"
-              # - "172.16.0.0/12"
+              - "10.0.0.0/8"
+              - "172.16.0.0/12"
               - "192.168.0.0/16"
     # Allow WAN traffic only to specific subdomains
-    # - from:
-    #     - source:
-    #         notRemoteIpBlocks:
-    #           - "10.0.0.0/8"
-    #           - "172.16.0.0/12"
-    #           - "192.168.0.0/16"
-    #   to:
-    #     - operation:
-    #         hosts:
-    #           - plex.yanello.net
-    #           - argocd.yanello.net
-    #           - renovate.yanello.net
-    #           - ombi.yanello.net
-    #           - ytdl.yanello.net
-    #           - nextcloud.yanello.net
-    #           - homeassistant.yanello.net
-    #           - overseerr.yanello.net
-    #           - immich.yanello.net
-    #           - bitwarden.yanello.net
+    - from:
+        - source:
+            notRemoteIpBlocks:
+              - "10.0.0.0/8"
+              - "172.16.0.0/12"
+              - "192.168.0.0/16"
+      to:
+        - operation:
+            hosts:
+              - plex.yanello.net
+              - argocd.yanello.net
+              - renovate.yanello.net
+              - ombi.yanello.net
+              - ytdl.yanello.net
+              - nextcloud.yanello.net
+              - homeassistant.yanello.net
+              - overseerr.yanello.net
+              - immich.yanello.net
+              - bitwarden.yanello.net
