--- a/argocd/apps/immich/ingress.yaml
+++ b/argocd/apps/immich/ingress.yaml
@@ -1,19 +1,16 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
 metadata:
-  name: immich
-  labels:
-    app: immich
+  name: immich-vs
 spec:
-  ingressClassName: istio
-  rules:
-    - host: immich.yanello.net
-      http:
-        paths:
-          - backend:
-              service:
-                name: immich-server
-                port:
-                  number: 2283
-            path: /
-            pathType: Prefix
+  hosts:
+  - immich.yanello.net
+  gateways:
+  - istio-system/kube-gateway
+  http:
+  - route:
+    - destination:
+        host: immich-server
+        port:
+          number: 2283
