--- a/argocd/apps/media-server/plex/service.yaml
+++ b/argocd/apps/media-server/plex/service.yaml
@@ -8,7 +8,7 @@ metadata:
     metallb.universe.tf/loadBalancerIPs: 10.10.8.10
 spec:
   type: LoadBalancer
-  externalTrafficPolicy: Local
+  #externalTrafficPolicy: Local
   ports:
     - port: 32400               # < port to open on the outside on the server
       targetPort: 32400         # < targetport. port on the pod to passthrough
