--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -46,22 +46,22 @@ spec:
             port:
               number: 30341
 ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: plex-vs
-# spec:
-#   hosts:
-#     - plex.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: marcus-server.lan
-#             port:
-#               number: 32400
-# ---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: plex-vs
+spec:
+  hosts:
+    - plex.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - route:
+        - destination:
+            host: marcus-server.lan
+            port:
+              number: 32400
+---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
