--- a/argocd/apps/media-server/plex/vs.yaml
+++ b/argocd/apps/media-server/plex/vs.yaml
@@ -1,16 +1,17 @@
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: plex-vs
-# spec:
-#   hosts:
-#   - plex.yanello.net
-#   gateways:
-#   - istio-system/kube-gateway
-#   http:
-#   - route:
-#     - destination:
-#         host: plex-media-server
-#         port:
-#           number: 32400
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: plex-vs
+spec:
+  hosts:
+  - plex.yanello.net
+  gateways:
+  - istio-system/kube-gateway
+  http:
+  - route:
+    - destination:
+        host: plex-media-server
+        port:
+          number: 32400
+          
