--- a/argocd/apps/media-server/plex/vs.yaml
+++ b/argocd/apps/media-server/plex/vs.yaml
@@ -11,7 +11,7 @@ spec:
   http:
   - route:
     - destination:
-        host: plex-media-server
+        host: plex
         port:
           number: 32400
           
