--- a/argocd/apps/media-server/plex/service.yaml
+++ b/argocd/apps/media-server/plex/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: plex-media-server
+  name: plex
   labels:
-    app: plex-media-server
+    app: plex
   # annotations:
   #   metallb.universe.tf/loadBalancerIPs: 10.10.8.10
 spec:
