--- a/argocd/apps/media-server/plex/deploy.yaml
+++ b/argocd/apps/media-server/plex/deploy.yaml
@@ -50,6 +50,7 @@ spec:
           imagePullPolicy: IfNotPresent
           resources:
             limits:
+              nvidia.com/gpu: "1"
               cpu: 4000m
               memory: 8Gi
             requests:
