--- a/argocd/apps/frigate/kustomization.yaml
+++ b/argocd/apps/frigate/kustomization.yaml
@@ -2,14 +2,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 generators:
-- ./secret-generator.yaml
+- ./manifests/secret-generator.yaml
 
 resources:
-- health-check.yaml
-- vs.yaml
+- ./manifests/health-check.yaml
+- ./manifests/vs.yaml
 
 patches:
-- path: ./health-check-patch.yaml
+- path: ./manifests/health-check-patch.yaml
 - target:
     kind: Deployment
     name: frigate
@@ -17,7 +17,6 @@ patches:
     - op: add
       path: /spec/template/spec/hostNetwork
       value: true
-
 - patch: |
     apiVersion: apps/v1
     kind: Deployment
@@ -34,13 +33,14 @@ patches:
   target:
     kind: Deployment
     name: frigate
+    
 helmCharts:
     - name: frigate
       repo: https://blakeblackshear.github.io/blakeshome-charts/
       version: "7.7.2"
       releaseName: frigate
       namespace: frigate
-      valuesFile: ./config.yaml
+      valuesFile: ./manifests/config.yaml
 
 images:
   - name: frigate
