--- a/argocd/apps/change-detection/vs.yaml
+++ b/argocd/apps/change-detection/vs.yaml
@@ -11,6 +11,6 @@ spec:
   http:
   - route:
     - destination:
-        host: change
+        host: change-detection
         port:
           number: 5000
