--- a/argocd/apps/infra/authentik/kustomization.yaml
+++ b/argocd/apps/infra/authentik/kustomization.yaml
@@ -10,6 +10,7 @@ generators:
 helmCharts:
     - name: authentik
       namespace: authentik
+      releaseName: authentik
       repo: https://charts.goauthentik.io/
       version: "2024.12.3"
       valuesFile: ./manifests/values.yaml
