--- a/ansible/longhorn/hosts.ini
+++ b/ansible/longhorn/hosts.ini
@@ -1,3 +1,7 @@
+[all:vars]
+ansible_user=marcus
+ansible_ssh_private_key_file=~/.ssh/id_ed25519
+
 [pi]
 192.168.10.2 node_name=picluster0
 192.168.10.11 node_name=picluster1
