--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -26,7 +26,7 @@ spec:
   http:
     - route:
         - destination:
-            host: homeassistant.local
+            host: homeassistant.lan
             port:
               number: 8123
 ---
@@ -42,7 +42,7 @@ spec:
   http:
     - route:
         - destination:
-            host: router.local
+            host: router.lan
             port:
               number: 30341
 # ---
@@ -90,7 +90,7 @@ spec:
   http:
     - route:
         - destination:
-            host: iotawatt.local
+            host: iotawatt.lan
             port:
               number: 80
 ---
@@ -122,7 +122,7 @@ spec:
   http:
     - route:
         - destination:
-            host: router.local
+            host: router.lan
             port:
               number: 3000
 ---
@@ -139,7 +139,7 @@ spec:
   http:
     - route:
         - destination:
-            host: router.local
+            host: router.lan
             port:
               number: 1000
 ---
@@ -155,7 +155,7 @@ spec:
   http:
     - route:
         - destination:
-            host: pikvm.local
+            host: pikvm.lan
             port:
               number: 80
 ---
@@ -177,7 +177,7 @@ spec:
             - ui.yanello.net
       route:
         - destination:
-            host: homeassistant.local
+            host: homeassistant.lan
             port:
               number: 8443
 ---
