--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -15,14 +15,14 @@ spec:
       protocol: HTTP
     # tls:
     #   httpsRedirect: true
-  - hosts:
-    - "ui.yanello.net"
-    port:
-      number: 443
-      name: https-passthrough
-      protocol: HTTPS
-    tls:
-      mode: PASSTHROUGH
+  # - hosts:
+  #   - "ui.yanello.net"
+  #   port:
+  #     number: 443
+  #     name: https-passthrough
+  #     protocol: HTTPS
+  #   tls:
+  #     mode: PASSTHROUGH
   - hosts:
       - "*.yanello.net"
       - "yanello.net"
@@ -81,3 +81,21 @@ spec:
 #             group: ""
 #             name: default-ingress-cert
 #             namespace: istio-system
+---
+apiVersion: networking.istio.io/v1beta1
+kind: Gateway
+metadata:
+  name: tls-pass-gateway
+spec:
+  selector:
+    istio: ingressgateway
+  servers:
+  - hosts:
+    - "ui.yanello.net"
+    port:
+      number: 443
+      name: https-passthrough
+      protocol: HTTPS
+    tls:
+      mode: PASSTHROUGH
+
