Revert "tls pass gw"
This reverts commit f4de6ae1e5708389f418be0d01c89dfcf20509fd.

--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -169,9 +169,10 @@ spec:
   hosts:
     - ui.yanello.net
   gateways:
-    - istio-system/tls-pass-gateway
+    - istio-system/kube-gateway
   tls:
-    - match:
+    - mode: PASSTHROUGH
+      match:
         - port: 443
           sniHosts:
             - ui.yanello.net
