--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -24,7 +24,7 @@ spec:
     tls:
       mode: PASSTHROUGH
   - hosts:
-      - "*.yanello.net"
+      #- "*.yanello.net"
       - "yanello.net"
     port:
       number: 443
