--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -26,6 +26,7 @@ spec:
   - hosts:
       #- "*.yanello.net"
       - "yanello.net"
+      - "argocd.yanello.net"
     port:
       number: 443
       name: https
