--- a/argocd/apps/infra/storage/local-storage/app.yaml
+++ b/argocd/apps/infra/storage/local-storage/app.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     name: local-path
   annotations:
-    storageclass.kubernetes.io/is-default-class: "true"
+    storageclass.kubernetes.io/is-default-class: "false"
 spec:
   syncPolicy:
     automated:
