--- a/argocd/apps/infra/storage/longhorn/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn/manifests/values.yaml
@@ -1,3 +1,2 @@
 defaultSettings:
-  defaultDataPath="/app/longhorn/"
-  allowRecurringJobWhileVolumeDetached="false"
+  defaultDataPath: "/app/longhorn/"
