--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -32,3 +32,4 @@ spec:
               - overseerr.yanello.net
               - immich.yanello.net
               - bitwarden.yanello.net
+              - mealie.yanello.net
