longhorn authentik storage

--- a/argocd/apps/infra/authentik/manifests/values.yaml
+++ b/argocd/apps/infra/authentik/manifests/values.yaml
@@ -46,7 +46,7 @@ postgresql:
   primary:
     persistence:
       enabled: true
-      storageClass: nfs-storage
+      storageClass: longhorn
       accessMode: ReadWriteOnce
   auth:
     username: authentik
