fix authentik endpoint

--- a/argocd/apps/infra/authentik/manifests/vs.yaml
+++ b/argocd/apps/infra/authentik/manifests/vs.yaml
@@ -11,6 +11,6 @@ spec:
   http:
   - route:
     - destination:
-        host: authentik
+        host: authentik-server
         port:
           number: 80
