--- a/argocd/apps/infra/monitoring/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-helmCharts:
-  - name: victoria-metrics-k8s-stack
-    releaseName: victoria-metrics-k8s-stack
-    repo: https://victoriametrics.github.io/helm-charts/
-    version: "0.36.1"
-    valuesFile: values.yaml
+# helmCharts:
+#   - name: victoria-metrics-k8s-stack
+#     releaseName: victoria-metrics-k8s-stack
+#     repo: https://victoriametrics.github.io/helm-charts/
+#     version: "0.36.1"
+#     valuesFile: values.yaml
