minio persistence path

--- a/argocd/apps/infra/storage/minio/manifests/values.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/values.yaml
@@ -7,3 +7,6 @@ affinity:
               operator: In
               values:
                 - marcus-server
+                
+persistence:
+  storageClass: local-path
