--- a/argocd/apps/infra/authentik/manifests/values.yaml
+++ b/argocd/apps/infra/authentik/manifests/values.yaml
@@ -2,6 +2,15 @@ global:
   envFrom:
     - secretRef:
         name: authentik-secrets
+  affinity:
+          nodeAffinity:
+            preferredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+                - matchExpressions:
+                    - key: kubernetes.io/hostname
+                      operator: In
+                      values:
+                        - marcus-server
 authentik:
   email:
     host: smtp.gmail.com
@@ -13,7 +22,7 @@ authentik:
   error_reporting:
     enabled: true
 server:
-  replicas: 3
+  replicas: 1
   resources:
     limits:
       cpu: 750m
@@ -22,7 +31,7 @@ server:
       cpu: 400m
       memory: 600Mi
 worker:
-  replicas: 2
+  replicas: 1
   resources:
     limits:
       cpu: 300m
