--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -45,8 +45,18 @@ spec:
     repoURL: https://istio-release.storage.googleapis.com/charts
     targetRevision: "1.24.3"
     chart: istiod
-    # helm:
-    # valuesObject:
+    helm:
+      valuesObject:
+        affinity:
+          nodeAffinity:
+            preferredDuringSchedulingIgnoredDuringExecution:
+              - weight: 1
+                preference:
+                  matchExpressions:
+                    - key: kubernetes.io/arch
+                      operator: In
+                      values:
+                        - amd64
     # global:
     # istioNamespace: istio-system
     # logging:
