--- a/argocd/apps/open-webui/kustomization.yaml
+++ b/argocd/apps/open-webui/kustomization.yaml
@@ -1,11 +1,10 @@
-# https://docker-minecraft-server.readthedocs.io/en/latest/
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# helmCharts:
-#     - name: open-webui
-#       repo: https://helm.openwebui.com/
-#       version: "5.13.0"
-#       releaseName: open-webui
-#       namespace: open-webui
-#       valuesFile: values.yaml
+helmCharts:
+    - name: open-webui
+      repo: https://helm.openwebui.com/
+      version: "5.13.0"
+      releaseName: open-webui
+      namespace: open-webui
+      valuesFile: values.yaml
