multiple istio reps

--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -90,6 +90,7 @@ spec:
     chart: gateway
     helm:
       valuesObject:
+        replicaCount: 2
         service:
           loadBalancerIP: 10.10.8.0
           externalTrafficPolicy: Local
