--- a/argocd/apps/infra/storage/longhorn/manifests/values.yaml
+++ b/argocd/apps/infra/storage/longhorn/manifests/values.yaml
@@ -3,3 +3,9 @@ defaultSettings:
 
 preUpgradeChecker:
   jobEnabled: false
+
+global:
+  tolerations:
+    - key: "node-role.kubernetes.io/control-plane"
+      operator: "Exists"
+      effect: "NoSchedule"
