owui pipeline storage

--- a/argocd/apps/open-webui/values.yaml
+++ b/argocd/apps/open-webui/values.yaml
@@ -12,3 +12,10 @@ persistence:
   storageClass: local-path
   accessMode: ReadWriteOnce
   size: 10Gi
+
+pipelines:
+  persistence:
+    enabled: true
+    storageClass: local-path
+    accessMode: ReadWriteOnce
+    size: 10Gi
