owui pipeline storage2

--- a/argocd/apps/open-webui/values.yaml
+++ b/argocd/apps/open-webui/values.yaml
@@ -16,6 +16,6 @@ persistence:
 pipelines:
   persistence:
     enabled: true
-    storageClass: local-path
+    storageClass: nfs
     accessMode: ReadWriteOnce
     size: 10Gi
