local path in namespace

--- a/argocd/apps/infra/storage/local-storage/manifests/configmap.yaml
+++ b/argocd/apps/infra/storage/local-storage/manifests/configmap.yaml
@@ -35,11 +35,13 @@ data:
   setup: |-
     #!/bin/sh
     set -eu
-    mkdir -m 0777 -p "$VOL_DIR"
+    NAMESPACE=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
+    mkdir -m 0777 -p "$NAMESPACE/$VOL_DIR"
   teardown: |-
     #!/bin/sh
     set -eu
-    rm -rf "$VOL_DIR"
+    NAMESPACE=$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)
+    rm -rf "$NAMESPACE/$VOL_DIR"
   helperPod.yaml: |-
     apiVersion: v1
     kind: Pod
