--- a/argocd/apps/infra/storage/local-storage/manifests/configmap.yaml
+++ b/argocd/apps/infra/storage/local-storage/manifests/configmap.yaml
@@ -55,3 +55,5 @@ data:
           effect: NoSchedule
       containers:
       - name: helper-pod
+        image: busybox:1.31.1
+        command: ["/bin/sh", "-c", "sleep 3600"]
