--- a/argocd/apps/open-webui/kustomization.yaml
+++ b/argocd/apps/open-webui/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 helmCharts:
-    - name: open-webui
-      repo: https://helm.openwebui.com/
-      version: "5.13.0"
-      releaseName: open-webui
-      namespace: open-webui
-      valuesFile: values.yaml
+  - name: open-webui
+    repo: https://helm.openwebui.com/
+    version: "5.13.0"
+    releaseName: open-webui
+    namespace: open-webui
+    valuesFile: manifests/values.yaml
