--- a/argocd/apps/open-webui/manifests/values.yaml
+++ b/argocd/apps/open-webui/manifests/values.yaml
@@ -10,7 +10,7 @@ tika:
 
 persistence:
   enabled: true
-  storageClass: local-path
+  storageClass: nfs-storage
   accessMode: ReadWriteOnce
   size: 10Gi
 
