--- a/argocd/apps/open-webui/manifests/values.yaml
+++ b/argocd/apps/open-webui/manifests/values.yaml
@@ -4,6 +4,9 @@ ollama:
     type: nvidia
     number: 1
   runtimeClassName: nvidia 
+  persistentVolume:
+    enabled: true
+    storageClass: nfs-storage
 
 tika:
   enabled: true
