owui ollama vs2

--- a/argocd/apps/open-webui/manifests/vs.yaml
+++ b/argocd/apps/open-webui/manifests/vs.yaml
@@ -17,8 +17,9 @@ spec:
     - match:
         - port: 11434
       route:
-        host: open-webui-ollama
-        port:
-          number: 11434
+        - destination:
+          host: open-webui-ollama
+          port:
+            number: 11434
 ---
 
