--- a/argocd/apps/open-webui/manifests/vs.yaml
+++ b/argocd/apps/open-webui/manifests/vs.yaml
@@ -14,6 +14,17 @@ spec:
             host: open-webui
             port:
               number: 80
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: open-webui-ollama-vs
+spec:
+  hosts:
+    - chat.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  tcp:
     - match:
         - port: 11434
       route:
