--- a/argocd/apps/open-webui/manifests/vs.yaml
+++ b/argocd/apps/open-webui/manifests/vs.yaml
@@ -14,21 +14,27 @@ spec:
             host: open-webui
             port:
               number: 80
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: open-webui-ollama-vs
-spec:
-  hosts:
-    - ollama.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
     - route:
-        - destination:
+        - match:
+            port: 11434
+          destination:
             host: open-webui-ollama
             port:
               number: 11434
----
-
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: open-webui-ollama-vs
+# spec:
+#   hosts:
+#     - ollama.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: open-webui-ollama
+#             port:
+#               number: 11434
+# ---
