owui ollama vs12

--- a/argocd/apps/open-webui/manifests/vs.yaml
+++ b/argocd/apps/open-webui/manifests/vs.yaml
@@ -18,10 +18,10 @@ spec:
         - match:
             port: 11434
           route:
-            destination:
-              host: open-webui-ollama
-              port:
-                number: 11434
+            - destination:
+                host: open-webui-ollama
+                port:
+                  number: 11434
 # ---
 # apiVersion: networking.istio.io/v1alpha3
 # kind: VirtualService
