owui ollama vs16

--- a/argocd/apps/open-webui/manifests/vs.yaml
+++ b/argocd/apps/open-webui/manifests/vs.yaml
@@ -7,7 +7,7 @@ spec:
   hosts:
     - chat.yanello.net
   gateways:
-    - istio-system/kube-gateway
+    - ollama-gateway
   http:
     - match:
         - port: 443
