--- a/argocd/apps/open-webui/manifests/vs.yaml
+++ b/argocd/apps/open-webui/manifests/vs.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: open-webui-vs
+  name: ollama-vs
 spec:
   hosts:
     - chat.yanello.net
@@ -23,20 +23,21 @@ spec:
             host: open-webui-ollama
             port:
               number: 11434
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: open-webui-ollama-vs
-# spec:
-#   hosts:
-#     - ollama.yanello.net
-#   gateways:
-#     - istio-system/kube-gateway
-#   http:
-#     - route:
-#         - destination:
-#             host: open-webui-ollama
-#             port:
-#               number: 11434
-# ---
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: open-webui-vs
+spec:
+  hosts:
+    - chat.yanello.net
+  gateways:
+    - istio-system/kube-gateway
+  http:
+    - match:
+        - port: 443
+      route:
+        - destination:
+            host: open-webui
+            port:
+              number: 80
