--- a/argocd/apps/open-webui/manifests/gw.yaml
+++ b/argocd/apps/open-webui/manifests/gw.yaml
@@ -11,24 +11,24 @@ spec:
         - "chat.yanello.net"
       port:
         number: 11434
-        name: https
-        protocol: HTTPS
-      tls:
-        credentialName: ollama-cert 
-        maxProtocolVersion: TLSV1_3
-        minProtocolVersion: TLSV1_2
-        mode: SIMPLE
-        cipherSuites:
-          - ECDHE-ECDSA-AES128-GCM-SHA256
-          - ECDHE-RSA-AES128-GCM-SHA256
-          - ECDHE-ECDSA-AES128-SHA
-          - AES128-GCM-SHA256
-          - AES128-SHA
-          - ECDHE-ECDSA-AES256-GCM-SHA384
-          - ECDHE-RSA-AES256-GCM-SHA384
-          - ECDHE-ECDSA-AES256-SHA
-          - AES256-GCM-SHA384
-          - AES256-SHA
+        name: http
+        protocol: HTTP
+      # tls:
+      #   credentialName: ollama-cert 
+      #   maxProtocolVersion: TLSV1_3
+      #   minProtocolVersion: TLSV1_2
+      #   mode: SIMPLE
+      #   cipherSuites:
+      #     - ECDHE-ECDSA-AES128-GCM-SHA256
+      #     - ECDHE-RSA-AES128-GCM-SHA256
+      #     - ECDHE-ECDSA-AES128-SHA
+      #     - AES128-GCM-SHA256
+      #     - AES128-SHA
+      #     - ECDHE-ECDSA-AES256-GCM-SHA384
+      #     - ECDHE-RSA-AES256-GCM-SHA384
+      #     - ECDHE-ECDSA-AES256-SHA
+      #     - AES256-GCM-SHA384
+      #     - AES256-SHA
     # - hosts:
     #     - "chat.yanello.net"
     #   port:
