--- a/argocd/apps/open-webui/manifests/vs.yaml
+++ b/argocd/apps/open-webui/manifests/vs.yaml
@@ -1,21 +1,21 @@
-# ---
-# apiVersion: networking.istio.io/v1alpha3
-# kind: VirtualService
-# metadata:
-#   name: ollama-vs
-# spec:
-#   hosts:
-#     - chat.yanello.net
-#   gateways:
-#     - ollama-gateway
-#   http:
-#     - match:
-#         - port: 11434
-#       route:
-#         - destination:
-#             host: open-webui-ollama
-#             port:
-#               number: 11434
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: ollama-vs
+spec:
+  hosts:
+    - chat.yanello.net
+  gateways:
+    - ollama-gateway
+  http:
+    - match:
+        - port: 11434
+      route:
+        - destination:
+            host: open-webui-ollama
+            port:
+              number: 11434
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
