fix minio chart name2

--- a/argocd/apps/infra/storage/minio/kustomization.yaml
+++ b/argocd/apps/infra/storage/minio/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 
 helmCharts:
     - name: operator
-      namespace: operator
+      namespace: minio
       releaseName: operator
       repo: https://operator.min.io
       version: "4.3.7"
