--- a/argocd/apps/infra/storage/minio/manifests/vs.yaml
+++ b/argocd/apps/infra/storage/minio/manifests/vs.yaml
@@ -11,6 +11,6 @@ spec:
   http:
   - route:
     - destination:
-        host: operator
+        host: sts
         port:
-          number: 4221
+          number: 4223
