--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -93,22 +93,22 @@ spec:
             host: iotawatt.lan
             port:
               number: 80
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: minio-vs
-spec:
-  hosts:
-    - minio.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: marcus-server.lan
-            port:
-              number: 9000
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: minio-vs
+# spec:
+#   hosts:
+#     - minio.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: marcus-server.lan
+#             port:
+#               number: 9000
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
